--- a/views/index.pug
+++ b/views/index.pug
@@ -8,12 +8,16 @@ block content
     li
       span= val.task + ' - '
       if val.completed > 0
-        span Completed
+        span(style="color: green;") Completed
       else
-        pan Not Completed
+        span(style="color: red;") Not Completed
       form(method='POST' action='/delete')
         input(type='hidden', name='id', value=val.id)
         button(type='submit') Delete
+
+      form(method='POST' action='/complete')
+            input(type='hidden', name='id', value=val.id)
+            button(type='submit') Complete
 
   hr
   h2 Add a new task
@@ -21,3 +25,5 @@ block content
     label(for='task') Task:
     input(type='text', name='task', id='task', required)
     button(type='submit') Create Task
+
+    
